# pso2_bot

./: Cargo.toml  README.md
pso2_bot/: Cargo.toml  README.md
pso2_bot/src/: main.rs
pso2_scraper/: Cargo.toml
pso2_scraper/src/: lib.rs
