[package]
name = "pso2_bot"
version = "0.1.0"
authors = ["daose <15278132+daose@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
env_logger = "0.7.1"
log = "0.4.8"
pso2_scraper = { path = "../pso2_scraper" }
clokwerk = "0.3.0"
chrono = "0.4"
