[package]
name = "pso2_scraper"
version = "0.1.0"
authors = ["daose <15278132+daose@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
chrono-tz = "0.5"
scraper = "0.12.0"
reqwest = {version = "0.10.6", features = ["blocking"]}
log = "0.4.8"
regex = "1.3.9"
lazy_static = "1.4.0"
